--- a/app/src/main/res/layout/activity_registro_usuario.xml
+++ b/app/src/main/res/layout/activity_registro_usuario.xml
@@ -65,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50px"
-            android:text="Iniciar Sesion"
+            android:text="Registrar"
             android:onClick="registrar"/>
 
     </LinearLayout>
