--- a/app/src/main/res/layout/activity_denuncia_register.xml
+++ b/app/src/main/res/layout/activity_denuncia_register.xml
@@ -17,7 +17,7 @@ android:layout_margin="16dp">
     android:inputType="text"
     android:maxLines="1"
     android:maxLength="100"
-    android:hint="Titulo"/>
+    android:hint="@string/titulo"/>
 
 
 
@@ -28,7 +28,7 @@ android:layout_margin="16dp">
     android:layout_marginBottom="16dp"
     android:inputType="textMultiLine"
     android:lines="3"
-    android:hint="Descripcion"
+    android:hint="@string/descripcion"
     android:maxLength="500"/>
 
 
@@ -39,7 +39,7 @@ android:layout_margin="16dp">
     android:layout_marginBottom="16dp"
     android:maxLength="100"
     android:textSize="20sp"
-    android:hint="Coordenadas"/>
+    android:hint="@string/coordenadas"/>
 
 <RelativeLayout
     android:layout_width="match_parent"
@@ -54,16 +54,14 @@ android:layout_margin="16dp">
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:drawableStart="@android:drawable/ic_menu_mylocation"
-        android:text="Capturar unbicacion"
-        android:onClick="takeGPS"/>
+        android:text="@string/capturar_unbicacion"/>
     <Button
         android:id="@+id/goMap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@+id/catchCoordenadas"
         android:drawableStart="@android:drawable/ic_dialog_map"
-        android:text="En Mapa"
-        android:onClick="takeGPS"/>
+        android:onClick="GoToGoogleMaps"/>
 </RelativeLayout>
 
 
@@ -86,7 +84,8 @@ android:layout_margin="16dp">
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentEnd="true"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@mipmap/ic_launcher"
+        android:onClick="captureGPS"/>
 
 </RelativeLayout>
 
